Markdown-to-LaTeX/MarkdownParsing/MarkdownParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/artur/RiderProjects/Markdown-to-LaTeX/Markdown-to-LaTeX/MarkdownParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MarkdownParsing {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class MarkdownParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Newline=1, Space=2, Tab=3, EscExclamation=4, EscDoubleQuote=5, EscSharp=6, 
		EscDolar=7, EscPercent=8, EscAmp=9, EscQuote=10, EscLPAREN=11, EscRPAREN=12, 
		EscStar=13, EscPlus=14, EscComma=15, EscDash=16, EscDot=17, EscSlash=18, 
		EscColon=19, EscSemicilon=20, EscLT=21, EscEqual=22, EscGT=23, EscQuestion=24, 
		EscAt=25, EscLBRACKET=26, EscBackslash=27, EscRBRACKET=28, EscCarrot=29, 
		EscUnderscore=30, EscCode=31, EscLBRACE=32, EscPipe=33, EscRBRACE=34, 
		EscTilde=35, LBRACKET=36, RBRACKET=37, LPAREN=38, RPAREN=39, LBRACE=40, 
		RBRACE=41, LT=42, GT=43, Dot=44, Slash=45, Backslash=46, Colon=47, Semicolon=48, 
		Exclamation=49, Quote=50, DoubleQuote=51, Sharp=52, Dolar=53, Percent=54, 
		Amp=55, Comma=56, Equal=57, Question=58, At=59, Carrot=60, Underscore=61, 
		Pipe=62, Tilde=63, Dash=64, Star=65, Plus=66, Code=67, Digit=68, Other=69;
	public const int
		RULE_document = 0, RULE_heading = 1, RULE_emptyHeading = 2, RULE_atxHeading = 3, 
		RULE_headingStart = 4, RULE_horizontalLine = 5, RULE_hLineDBegin = 6, 
		RULE_hLineUBegin = 7, RULE_hLineSBegin = 8, RULE_indent3 = 9, RULE_indent2 = 10, 
		RULE_indent1 = 11, RULE_fencedCode = 12, RULE_indentedCodeBlock = 13, 
		RULE_indentedCode1 = 14, RULE_list = 15, RULE_list1 = 16, RULE_list2 = 17, 
		RULE_list3 = 18, RULE_iList3 = 19, RULE_iList2 = 20, RULE_iList1 = 21, 
		RULE_iList0 = 22, RULE_iListItem3 = 23, RULE_iListItem2 = 24, RULE_iListItem1 = 25, 
		RULE_iListItem0 = 26, RULE_iListBegin = 27, RULE_eList3 = 28, RULE_eList2 = 29, 
		RULE_eList1 = 30, RULE_eList0 = 31, RULE_eListItem3 = 32, RULE_eListItem2 = 33, 
		RULE_eListItem1 = 34, RULE_eListItem0 = 35, RULE_eListBegin = 36, RULE_blockQuote = 37, 
		RULE_blockQuoteLine = 38, RULE_emptyBlockQuoteLine = 39, RULE_blockQuoteStart = 40, 
		RULE_table = 41, RULE_headerRow = 42, RULE_contentRow = 43, RULE_cellContent = 44, 
		RULE_separatorRow = 45, RULE_separatorContent = 46, RULE_imageLine = 47, 
		RULE_textLine = 48, RULE_requiredText = 49, RULE_optionalText = 50, RULE_displayText = 51, 
		RULE_linkText = 52, RULE_urlText = 53, RULE_headingText = 54, RULE_link = 55, 
		RULE_urlLink = 56, RULE_textLink = 57;
	public static readonly string[] ruleNames = {
		"document", "heading", "emptyHeading", "atxHeading", "headingStart", "horizontalLine", 
		"hLineDBegin", "hLineUBegin", "hLineSBegin", "indent3", "indent2", "indent1", 
		"fencedCode", "indentedCodeBlock", "indentedCode1", "list", "list1", "list2", 
		"list3", "iList3", "iList2", "iList1", "iList0", "iListItem3", "iListItem2", 
		"iListItem1", "iListItem0", "iListBegin", "eList3", "eList2", "eList1", 
		"eList0", "eListItem3", "eListItem2", "eListItem1", "eListItem0", "eListBegin", 
		"blockQuote", "blockQuoteLine", "emptyBlockQuoteLine", "blockQuoteStart", 
		"table", "headerRow", "contentRow", "cellContent", "separatorRow", "separatorContent", 
		"imageLine", "textLine", "requiredText", "optionalText", "displayText", 
		"linkText", "urlText", "headingText", "link", "urlLink", "textLink"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "' '", "'\\t'", "'\\!'", "'\\\"'", "'\\#'", "'\\$'", "'\\%'", 
		"'\\&'", "'\\''", "'\\('", "'\\)'", "'\\*'", "'\\+'", "'\\,'", "'\\-'", 
		"'\\.'", "'\\/'", "'\\:'", "'\\;'", "'\\<'", "'\\='", "'\\>'", "'\\?'", 
		"'\\@'", "'\\['", "'\\\\'", "'\\]'", "'\\^'", "'\\_'", "'\\`'", "'\\{'", 
		"'\\|'", "'\\}'", "'\\~'", "'['", "']'", "'('", "')'", "'{'", "'}'", "'<'", 
		"'>'", "'.'", "'/'", "'\\'", "':'", "';'", "'!'", "'''", "'\"'", "'#'", 
		"'$'", "'%'", "'&'", "','", "'='", "'?'", "'@'", "'^'", "'_'", "'|'", 
		"'~'", "'-'", "'*'", "'+'", "'`'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Newline", "Space", "Tab", "EscExclamation", "EscDoubleQuote", "EscSharp", 
		"EscDolar", "EscPercent", "EscAmp", "EscQuote", "EscLPAREN", "EscRPAREN", 
		"EscStar", "EscPlus", "EscComma", "EscDash", "EscDot", "EscSlash", "EscColon", 
		"EscSemicilon", "EscLT", "EscEqual", "EscGT", "EscQuestion", "EscAt", 
		"EscLBRACKET", "EscBackslash", "EscRBRACKET", "EscCarrot", "EscUnderscore", 
		"EscCode", "EscLBRACE", "EscPipe", "EscRBRACE", "EscTilde", "LBRACKET", 
		"RBRACKET", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LT", "GT", "Dot", 
		"Slash", "Backslash", "Colon", "Semicolon", "Exclamation", "Quote", "DoubleQuote", 
		"Sharp", "Dolar", "Percent", "Amp", "Comma", "Equal", "Question", "At", 
		"Carrot", "Underscore", "Pipe", "Tilde", "Dash", "Star", "Plus", "Code", 
		"Digit", "Other"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MarkdownParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MarkdownParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MarkdownParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MarkdownParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public HeadingContext[] heading() {
			return GetRuleContexts<HeadingContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HeadingContext heading(int i) {
			return GetRuleContext<HeadingContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HorizontalLineContext[] horizontalLine() {
			return GetRuleContexts<HorizontalLineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HorizontalLineContext horizontalLine(int i) {
			return GetRuleContext<HorizontalLineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FencedCodeContext[] fencedCode() {
			return GetRuleContexts<FencedCodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FencedCodeContext fencedCode(int i) {
			return GetRuleContext<FencedCodeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IndentedCodeBlockContext[] indentedCodeBlock() {
			return GetRuleContexts<IndentedCodeBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IndentedCodeBlockContext indentedCodeBlock(int i) {
			return GetRuleContext<IndentedCodeBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext[] list() {
			return GetRuleContexts<ListContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext list(int i) {
			return GetRuleContext<ListContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockQuoteContext[] blockQuote() {
			return GetRuleContexts<BlockQuoteContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockQuoteContext blockQuote(int i) {
			return GetRuleContext<BlockQuoteContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableContext[] table() {
			return GetRuleContexts<TableContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table(int i) {
			return GetRuleContext<TableContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImageLineContext[] imageLine() {
			return GetRuleContexts<ImageLineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImageLineContext imageLine(int i) {
			return GetRuleContext<ImageLineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextLineContext[] textLine() {
			return GetRuleContexts<TextLineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextLineContext textLine(int i) {
			return GetRuleContext<TextLineContext>(i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.EnterDocument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.ExitDocument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownParserVisitor<TResult> typedVisitor = visitor as IMarkdownParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Newline) {
				{
				State = 125;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 116;
					heading();
					}
					break;
				case 2:
					{
					State = 117;
					horizontalLine();
					}
					break;
				case 3:
					{
					State = 118;
					fencedCode();
					}
					break;
				case 4:
					{
					State = 119;
					indentedCodeBlock();
					}
					break;
				case 5:
					{
					State = 120;
					list();
					}
					break;
				case 6:
					{
					State = 121;
					blockQuote();
					}
					break;
				case 7:
					{
					State = 122;
					table();
					}
					break;
				case 8:
					{
					State = 123;
					imageLine();
					}
					break;
				case 9:
					{
					State = 124;
					textLine();
					}
					break;
				}
				}
				State = 129;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeadingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtxHeadingContext atxHeading() {
			return GetRuleContext<AtxHeadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyHeadingContext emptyHeading() {
			return GetRuleContext<EmptyHeadingContext>(0);
		}
		public HeadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.EnterHeading(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.ExitHeading(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownParserVisitor<TResult> typedVisitor = visitor as IMarkdownParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeadingContext heading() {
		HeadingContext _localctx = new HeadingContext(Context, State);
		EnterRule(_localctx, 2, RULE_heading);
		try {
			State = 132;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 130;
				atxHeading();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 131;
				emptyHeading();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EmptyHeadingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public HeadingStartContext headingStart() {
			return GetRuleContext<HeadingStartContext>(0);
		}
		public EmptyHeadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_emptyHeading; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.EnterEmptyHeading(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.ExitEmptyHeading(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownParserVisitor<TResult> typedVisitor = visitor as IMarkdownParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmptyHeading(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EmptyHeadingContext emptyHeading() {
		EmptyHeadingContext _localctx = new EmptyHeadingContext(Context, State);
		EnterRule(_localctx, 4, RULE_emptyHeading);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134;
			headingStart();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtxHeadingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public HeadingStartContext headingStart() {
			return GetRuleContext<HeadingStartContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Space() { return GetTokens(MarkdownParser.Space); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Space(int i) {
			return GetToken(MarkdownParser.Space, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HeadingTextContext headingText() {
			return GetRuleContext<HeadingTextContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Sharp() { return GetTokens(MarkdownParser.Sharp); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Sharp(int i) {
			return GetToken(MarkdownParser.Sharp, i);
		}
		public AtxHeadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atxHeading; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.EnterAtxHeading(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.ExitAtxHeading(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownParserVisitor<TResult> typedVisitor = visitor as IMarkdownParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtxHeading(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtxHeadingContext atxHeading() {
		AtxHeadingContext _localctx = new AtxHeadingContext(Context, State);
		EnterRule(_localctx, 6, RULE_atxHeading);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			headingStart();
			State = 137;
			Match(Space);
			State = 138;
			headingText();
			State = 145;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Space) {
				{
				State = 139;
				Match(Space);
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 140;
					Match(Sharp);
					}
					}
					State = 143;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==Sharp );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeadingStartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Newline() { return GetToken(MarkdownParser.Newline, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Sharp() { return GetTokens(MarkdownParser.Sharp); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Sharp(int i) {
			return GetToken(MarkdownParser.Sharp, i);
		}
		public HeadingStartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_headingStart; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.EnterHeadingStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.ExitHeadingStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownParserVisitor<TResult> typedVisitor = visitor as IMarkdownParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeadingStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeadingStartContext headingStart() {
		HeadingStartContext _localctx = new HeadingStartContext(Context, State);
		EnterRule(_localctx, 8, RULE_headingStart);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147;
			Match(Newline);
			State = 148;
			Match(Sharp);
			State = 162;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Sharp) {
				{
				State = 149;
				Match(Sharp);
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==Sharp) {
					{
					State = 150;
					Match(Sharp);
					State = 158;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==Sharp) {
						{
						State = 151;
						Match(Sharp);
						State = 156;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
						if (_la==Sharp) {
							{
							State = 152;
							Match(Sharp);
							State = 154;
							ErrorHandler.Sync(this);
							_la = TokenStream.LA(1);
							if (_la==Sharp) {
								{
								State = 153;
								Match(Sharp);
								}
							}

							}
						}

						}
					}

					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HorizontalLineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public HLineDBeginContext hLineDBegin() {
			return GetRuleContext<HLineDBeginContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Newline() { return GetToken(MarkdownParser.Newline, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Space() { return GetTokens(MarkdownParser.Space); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Space(int i) {
			return GetToken(MarkdownParser.Space, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Dash() { return GetTokens(MarkdownParser.Dash); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dash(int i) {
			return GetToken(MarkdownParser.Dash, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HLineUBeginContext hLineUBegin() {
			return GetRuleContext<HLineUBeginContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Underscore() { return GetTokens(MarkdownParser.Underscore); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Underscore(int i) {
			return GetToken(MarkdownParser.Underscore, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HLineSBeginContext hLineSBegin() {
			return GetRuleContext<HLineSBeginContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Star() { return GetTokens(MarkdownParser.Star); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Star(int i) {
			return GetToken(MarkdownParser.Star, i);
		}
		public HorizontalLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_horizontalLine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.EnterHorizontalLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownParserListener typedListener = listener as IMarkdownParserListener;
			if (typedListener != null) typedListener.ExitHorizontalLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownParserVisitor<TResult> typedVisitor = visitor as IMarkdownParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHorizontalLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HorizontalLineContext horizontalLine() {
		HorizontalLineContext _localctx = new HorizontalLineContext(Context, State);
		EnterRule(_localctx, 10, RULE_horizontalLine);
		int _la;
		try {
			State = 191;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 164;
				hLineDBegin();
				State = 168;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==Space || _la==Dash) {
					{
					{
					State = 165;
					_la = TokenStream.LA(1);
					if ( !(_la==Space || _la==Dash) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					}
					State = 170;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 171;
				Match(Newline);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 173;
				hLineUBegin();
				State = 177;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==Space || _la==Underscore) {
					{
					{
					State = 174;
					_la = TokenStream.LA(1);
					if ( !(_la==Space || _la==Underscore) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					}
					State = 179;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 180;
				Match(Newline);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 182;
				hLineSBegin();
				State = 186;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==Space || _la==Star) {
					{
					{
					State = 183;
					_la = TokenStream.LA(1);
					if ( !(_la==Space || _la==Star) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					}
					State = 188;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 189;
				Match(Newline);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
